Bug 688135 - crash [@ nsMsgDBFolder::CallFilterPlugins(nsIMsgWindow*, int*)], r=Standard8